--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Ayodele Daniel | WDD 130</title>
 </head>
 <body>
     <h1>Welcome to WDD 130.</h1>
     <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
     <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+
+    <header>
+      <nav>
+        <a href="#">Home</a>
+         <a href="wwr/">Ayodele website</a>
+      </nav>
+    </header>
+
+    <main>
+    <h1>Ayodele Daniel | WDD 130</h1>
+        <p>My favourite city is Paris. It is known for its art, fashion, and culture.</p>
+        <img src="images/profile daniel-1.png" alt="hello, my name is Ayodele Daniel" width="200" >
+        <p>Hello! My name is Ayodele Daniel and I am from Nigeria. I enjoy coding, reading, and exploring new technologies.</p>
+    </main>
+
+    <footer>
+        <p>©2025 🌴 Ayodele Daniel 🌴 Nigeria</p>
+    </footer>
 </body>
 </html>
+
+
