--- a/week02/temple.html
+++ b/week02/temple.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Card - Abidjan Cote d'Ivoire</title>
+<meta name="description" content="Ayodele Daniel's BYU-Idaho WDD 130 course home page">
+<meta name="author" content="Ayodele Daniel">
+
+    <link rel="stylesheet" href="/WDD130/week02/styles/temple.css">
 </head>
 
 <body>
@@ -18,7 +22,7 @@
         </picture>
         <section>
             <h2>About the Temple</h2>
-            <p>The Abidjan Ivory Coast Temple is the seventh temple built in Africa and the first for Ivory Coast (Côte
+            <p>The Abidjan Ivory Coast Temple is the seventh <br>temple built in Africa and the first for Ivory Coast <br> (Côte
                 d'Ivoire).</p>
             <p>Dedicated 25 May 2025: <a
                     href="https://www.churchofjesuschrist.org/temples/dedicatory-prayer/abidjan-ivory-coast-temple/2025-05-25?lang=eng"
@@ -27,7 +31,7 @@
         <section>
             <h2>Visiting Information</h2>
             <ul>
-                <li>Location: Lot 118 Riviera Attoban Cocody Abidjan Cote d'Ivoire</li>
+                <li>Location: Lot 118 Riviera Attoban Cocody <br> Abidjan Cote d'Ivoire</li>
                 <li>Hours: Check Ordinance Schedule</li>
                 <li>Phone: +225 25 22 0 18010</li>
                 <li>Housing: Available</li>
@@ -35,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>Temple Card - Your Name</p>
+        <p>Temple Card - Ayodele Daniel</p>
     </footer>
 </body>
 
