Home page enhancement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayodele Daniel | WDD 130</title>
+    <meta name="description" content="Ayodele Daniel's BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Ayodele Daniel">
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
+
 <body>
     <header>
       <nav>
@@ -18,6 +23,14 @@
         <img src="images/profile daniel-1.png" alt="hello, my name is Ayodele Daniel" width="200" >
         <p>Hello! My name is Ayodele Daniel and I am from Nigeria. I enjoy coding, reading, and exploring new technologies.</p>
     </main>
+
+<aside>
+    <h2>Nigeria</h2>
+    <img src="images/nigeria.webp" alt="This is Nigeria my country" width="200">
+    <p> Nigeria is a country located in West Africa, known for its diverse culture, rich history, and vibrant economy.
+        It has a square footage of 923,768 square kilometers and a population of over 200 million people, making it the most populous country in Africa. 
+    </p>
+</aside>
 
     <footer>
         <p>©2025 🌴 Ayodele Daniel 🌴 Nigeria</p>
