change WDD130 to wdd130

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-    <h1>Ayodele Daniel | WDD 130</h1>
+    <h1>Ayodele Daniel | wdd130</h1>
         <img src="images/profile daniel-1.png" alt="hello, my name is Ayodele Daniel" width="200" >
         <p>Hello! My name is Ayodele Daniel and I am from Nigeria. I enjoy coding, reading, and exploring new technologies.</p>
     </main>
