--- a/wrr/about.html
+++ b/wrr/about.html
@@ -2,18 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day Out | About Us</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us | Day Out Expeditions</title>
+
     <meta name="description"
-        content="Learn about Day Out — your trusted partner for adventure and whitewater rafting experiences." />
-    <meta name="author" content="Ayodele Daniel" />
-    <link rel="stylesheet" href="styles/rafting.css" />
+        content="Learn about Day Out Expeditions — your trusted partner for adventure and whitewater rafting experiences.">
+    <meta name="author" content="Ayodele Daniel">
+
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
+
     <header>
-        <img src="images/logo.png" alt="Day Out Logo" class="logo" />
+        <img src="images/logo.png" alt="Day Out Logo" class="logo">
+
         <nav class="sidebar">
             <a href="index.html">Home</a>
             <a href="about.html" class="active">About Us</a>
@@ -23,56 +27,60 @@
     </header>
 
     <main>
-        <section class="hero">
-            <img src="images/hero-page.jpg" alt="White Water Rafting Adventure" />
-            <div class="hero-text">
-                <h1>Drafting Side Company</h1>
-                <p>Discover who we are and why adventure runs in our veins</p>
-            </div>
-        </section>
 
-        <section class="about-content">
+        <!-- Required hero container -->
+        <div class="hero">
+            <img src="images/hero-page.jpg" alt="White Water Rafting Adventure">
+
+            <h1>Day Out Expeditions</h1>
+
+            <!-- Required article inside hero -->
             <article>
-                <img src="images/hero_transparency.png" alt="Happy Rafter" class="about-img" />
-                <div class="text">
-                    <h2>About Us — Day Out Expeditions</h2>
-                    <p>
-                        At <strong>Day Out Expeditions</strong>, our whitewater rafting trips are designed to give
-                        thrill-seekers an unforgettable adventure on the water.
-                        Our expert guides ensure your safety while navigating through stunning landscapes and
-                        challenging rapids. Oars Up!
-                    </p>
-                </div>
+                <img src="images/hero_transparency.png" alt="Happy Rafter">
             </article>
+        </div>
 
-            <div class="history">
-                <img src="images/historical rafting.webp" alt="" srcset="">
-                <h2>Our History</h2>
-                <p>
-                    Founded in 1995 by a group of adventure enthusiasts, Day Out Expeditions started with a handful of
-                    rafts and a passion for exploration.
-                    What began as a small venture has grown into one of the leading providers of whitewater rafting
-                    experiences, known for safety, fun, and connection with nature.
-                </p>
-            </div>
+        <!-- FIRST REQUIRED SECTION -->
+        <section>
+            <h2>History</h2>
+                    <img src="images/historical-rafting.webp" alt="Historic Rafting Experience" class="history-img">
 
-            <div class="cta">
-                <h2>Adventure Awaits You!</h2>
-                <a href="trips.html" class="btn">Book a Trip</a>
-            </div>
+            <p>
+                Founded in 1995 by a group of adventure enthusiasts, Day Out Expeditions started with a handful of rafts
+                and a passion for exploration.
+                What began as a small venture has grown into a leading provider of whitewater rafting experiences
+                known for safety, excitement,
+                and unforgettable connections with nature.
+            </p>
         </section>
+
+        <!-- SECOND REQUIRED SECTION -->
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <p>
+                At Day Out Expeditions, our whitewater rafting trips are designed to give thrill-seekers unforgettable
+                experiences on the water.
+                Our expert guides ensure safety while navigating beautiful scenery and challenging rapids. Oars Up
+                your next adventure begins here!
+            </p>
+            <a href="trips.html" class="btn">Book a Trip</a>
+        </section>
+
+        <!-- Historical image (corrected filename + alt text) -->
+
     </main>
 
     <footer>
-        <p>Day Out © 2025. Ayodele Daniel</p>
-        <nav class="footer-nav">
-            <a href="site-plan.html">Site Plan</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="#"><img src="images/facebook.svg" alt="Facebook" /></a>
-            <a href="#"><img src="images/linkedin.svg" alt="Linkedin" /></a>
-            <a href="#"><img src="images/instagram-square.svg" alt="Instagram" /></a>
+        <p>Day Out Expeditions © 2025. Ayodele Daniel</p>
+
+        <!-- Required: nav.socialmedia with exactly 3 links -->
+        <nav class="socialmedia">
+            <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="#"><img src="images/instagram-square.svg" alt="Instagram"></a>
         </nav>
     </footer>
+
 </body>
 
 </html>
