change the alt happy rafter and also compress the hero-page image

--- a/wrr/about.html
+++ b/wrr/about.html
@@ -36,7 +36,7 @@
 
             <!-- Required article inside hero -->
             <article>
-                <img src="images/hero_transparency.png" alt="Happy Rafter">
+                <img src="images/raft.jpg" alt="Happy Rafter">
             </article>
         </div>
 
